# streamer

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client.cpp  client_app.cpp  client_app.h  sender.cpp  sender.h
common/: CMakeLists.txt  appimpl.cpp  appimpl.h  application.h  common.cpp  common.h  messages.h  object.h  ptr.h  types.h
docs/: success_stream_flow.pu
server/: CMakeLists.txt
server/src/: ports_pull.hpp  receiver.cpp  receiver.h  server.cpp  server_app.cpp  server_app.h  stream_svc.cpp  stream_svc.h
tests/: CMakeLists.txt  tests.cpp
